modified both files

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>Hello world</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <style>
-
-  </style>
+  <style></style>
   <body>
     <div>
       <h1>WELCOME</h1>
@@ -25,40 +23,47 @@
           <td>hemil.r@simformsolutions.com</td>
         </tr>
         <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>
-          <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>
-          <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>  <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>
-          <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>
-          <tr>
-            <td>Hemil</td>
-            <td>Rajpura</td>
-            <td>hemil.r@simformsolutions.com</td>
-          </tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
+        <tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
+        <tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
+        <tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
+        <tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
+        <tr>
+          <td>Hemil</td>
+          <td>Rajpura</td>
+          <td>hemil.r@simformsolutions.com</td>
+        </tr>
       </table>
     </div>
 
+<!--    <div>
+      <iframe
+        src="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_iframe_target"
+        height="500px"
+        width="60%"
+      ></iframe> 
+    </div> -->
     <div>
-        <iframe src="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_iframe_target" height="500px" width="60%"></iframe>
-
+        <a class="btn" href="https://github.com/hemilrajpura-simform/">Github</a>
     </div>
   </body>
 </html>
