--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
     <div>
         <a class="btn" href="https://github.com/hemilrajpura-simform/">Github</a>
     </div>
+    <div>
+        <a class="btn" href="https://github.com/hemilrajpura-simform/">Outlook</a>
+    </div>
   </body>
 </html>
