--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello world</title>
+    <title>Hello world newBranch</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <style></style>
