css3 practical started

--- a/index.html
+++ b/index.html
@@ -65,5 +65,17 @@
     <div>
         <a class="btn" href="https://github.com/hemilrajpura-simform/">Github</a>
     </div>
+
+    <div class="flexbox-paging"> 
+        <div>&laquo;</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>    
+        <div>&raquo;</div>
+        <p>Flexbox</p>
+    </div>
+
   </body>
 </html>
