--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
     </div>
 
     <div class="flexbox-paging"> 
-        <div>&laquo;</div>
+        <div class="animation"  id="animation1">&laquo;</div>
         <div>1</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
         <div>5</div>    
-        <div>&raquo;</div>
+        <div class="animation" id="animation2">&raquo;</div>
         <p>Flexbox</p>
     </div>
+
+
 
   </body>
 </html>
