grid layout added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello world <change> </title>
+    <title>Hello world  </title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <style></style>
@@ -80,6 +80,27 @@
         <div class="animation" id="animation2">&raquo;</div>
         <p>Flexbox</p>
     </div>
+
+
+    <div class="grid-cont"> 
+     <h2>Grid layout</h2>
+      <div class="item1">1</div>
+      <div class="item2">2</div>
+      <div class="item3">3</div>
+      <div class="item4">4</div>
+      <div class="item5" >5</div>    
+      <div class="item5">6</div>
+      <div class="item5">7</div>
+      <div class="item5">8</div>
+      <div class="item5">9</div>
+      <div class="item5">10</div>  
+      <div class="item5">11</div>
+      <div class="item5">12</div>
+      <div class="item5">13</div>
+      <div class="item5">14</div>
+      <div class="item5">15</div>
+      <div class="item5">16</div>
+  </div> 
 
 
 
