--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Hello world  </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <style></style>
-  <body class="container">
+  <body>
+    <div class="container">
     <div>
       <h1>WELCOME</h1>
     </div>
@@ -108,6 +112,30 @@
       <div class="item5">16</div>
   </div> 
 
+  <div class="container">
+    <h2 class="text-center">Grid with bootstrap</h2>
+    <div class="row border m-0">
+      <div class="col border text-light m-0 bg-dark">
+        1 of 2
+      </div> 
+      <div class="col border text-light m-0 bg-dark">
+        2 of 2
+      </div>
+    </div>
+    <div class="row border text-light m-0 bg-dark">
+      <div class="col border text-light m-0 bg-dark">
+        1 of 3
+      </div>
+      <div class="col border text-light m-0 bg-dark">
+        2 of 3
+      </div>
+      <div class="col border text-light m-0 bg-dark">
+        3 of 3
+      </div>
+    </div>
+  </div>
+
+</div>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
